--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* cyber device class: switch to newer Linux device class API
 	* cyber makefile: provide install target
+	* cyber: hide internal symbols
 
 2017-02-25  Felix Morgner <felix.morgner@gmail.com>
 
