--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-07-10  Felix Morgner <felix.morgner@gmail.com>
+
+	* cyber device class: fix compilation on Linux >= 6.4.0
+
 2023-03-12  Felix Morgner <felix.morgner@gmail.com>
 
 	* cyber device class: fix compilation on Linux >= 6.2.0
